added code comments; refactored to be 2.0 compliant (with the new wsapi store name)

--- a/session_3_basic_grid/BasicRallyGrid/deploy/App-uncompressed.html
+++ b/session_3_basic_grid/BasicRallyGrid/deploy/App-uncompressed.html
@@ -3,49 +3,56 @@
 <head>
     <title>BasicRallyGrid</title>
 
-    <script type="text/javascript" src="/apps/2.0rc1/sdk.js"></script>
+    <script type="text/javascript" src="/apps/2.0rc2/sdk.js"></script>
 
     <script type="text/javascript">
         Rally.onReady(function () {
-                Ext.define('CustomApp', {
-    extend: 'Rally.app.App',
-    componentCls: 'app',
+                // Custom Rally App that displays Stories in a grid.
+//
+// Note: various console debugging messages intentionally kept in the code for learning purposes
 
+Ext.define('CustomApp', {
+    extend: 'Rally.app.App',      // The parent class manages the app 'lifecycle' and calls launch() when ready
+    componentCls: 'app',          // CSS styles found in app.css
 
+    // Entry Point to App
     launch: function() {
-      console.log('our first app');
-      this._loadData();
+
+      console.log('our first app');     // see console api: https://developers.google.com/chrome-developer-tools/docs/console-api
+      this._loadData();                 // we need to prefix with 'this.' so we call a method found at the app level.
     },
 
+    // Get data from Rally
     _loadData: function() {
 
-      Ext.create('Rally.data.WsapiDataStore', {
+      var myStore = Ext.create('Rally.data.wsapi.Store', {
           model: 'User Story',
-          autoLoad: true,
+          autoLoad: true,                         // <----- Don't forget to set this to true! heh
           listeners: {
               load: function(myStore, myData, success) {
                   console.log('got data!', myStore, myData);
-                  this._createGrid(myStore);
+                  this._loadGrid(myStore);      // if we did NOT pass scope:this below, this line would be incorrectly trying to call _createGrid() on the store which does not exist.
               },
-              scope: this
+              scope: this                         // This tells the wsapi data store to forward pass along the app-level context into ALL listener functions
           },
-          fetch: ['Name', 'ScheduleState']
+          fetch: ['FormattedID', 'Name', 'ScheduleState']   // Look in the WSAPI docs online to see all fields available!
         });
 
-
     },
-    
-    _createGrid: function(myStore) {
-                  
-      var myGrid =Ext.create('Rally.ui.grid.Grid', {
-        store: myStore,
-        columnCfgs: [
-          'FormattedID',
-          'Name'
+
+    // Create and Show a Grid of given stories
+    _loadGrid: function(myStoryStore) {
+
+      var myGrid = Ext.create('Rally.ui.grid.Grid', {
+        store: myStoryStore,
+        columnCfgs: [         // Columns to display; must be the same names specified in the fetch: above in the wsapi data store
+          'FormattedID', 'Name', 'ScheduleState'
         ]
       });
 
-      this.add(myGrid);
+      this.add(myGrid);       // add the grid Component to the app-level Container (by doing this.add, it uses the app container)
+
+      console.log('what is this?', this);
 
     }
 
