--- a/session_3_basic_grid/BasicRallyGrid/deploy/App.html
+++ b/session_3_basic_grid/BasicRallyGrid/deploy/App.html
@@ -3,11 +3,11 @@
 <head>
     <title>BasicRallyGrid</title>
 
-    <script type="text/javascript" src="/apps/2.0rc1/sdk.js"></script>
+    <script type="text/javascript" src="/apps/2.0rc2/sdk.js"></script>
 
     <script type="text/javascript">
         Rally.onReady(function () {
-                Ext.define("CustomApp",{extend:"Rally.app.App",componentCls:"app",launch:function(){console.log("our first app"),this._loadData()},_loadData:function(){Ext.create("Rally.data.WsapiDataStore",{model:"User Story",autoLoad:!0,listeners:{load:function(myStore,myData,success){console.log("got data!",myStore,myData),this._createGrid(myStore)},scope:this},fetch:["Name","ScheduleState"]})},_createGrid:function(myStore){var myGrid=Ext.create("Rally.ui.grid.Grid",{store:myStore,columnCfgs:["FormattedID","Name"]});this.add(myGrid)}});
+                Ext.define("CustomApp",{extend:"Rally.app.App",componentCls:"app",launch:function(){console.log("our first app"),this._loadData()},_loadData:function(){var myStore=Ext.create("Rally.data.wsapi.Store",{model:"User Story",autoLoad:!0,listeners:{load:function(myStore,myData,success){console.log("got data!",myStore,myData),this._loadGrid(myStore)},scope:this},fetch:["FormattedID","Name","ScheduleState"]})},_loadGrid:function(myStoryStore){var myGrid=Ext.create("Rally.ui.grid.Grid",{store:myStoryStore,columnCfgs:["FormattedID","Name","ScheduleState"]});this.add(myGrid),console.log("what is this?",this)}});
 
             Rally.launchApp('CustomApp', {
                 name:"BasicRallyGrid",
